# basedpython

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  dist-workspace.toml  mkdocs.template.yml  pyproject.toml  ruff.schema.json  ty.schema.json  zensical.toml
.config/: nextest.toml
.github/workflows/: basedpython-docs.yml  build-binaries.yml  build-docker.yml  by-ecosystem-roundtrip.yaml  by-ecosystem-roundtrip_comment.yaml  ci.yaml  ci.yml  daily_fuzz.yaml  docs.yml  ecosystem.yml  memory_report.yaml  publish-pypi.yml  publish.yml  release.yml  ty-ecosystem-analyzer.yaml  typing_conformance.yaml
crates/basedpython/: Cargo.toml
crates/basedpython/src/: buff.rs  by.rs
crates/by_transforms/: Cargo.toml
crates/by_transforms/src/: config.rs  lib.rs  source_map.rs  type_info.rs
crates/by_transforms/src/reverse_transforms/: anon_named_tuple.rs  auto_quote.rs  callable.rs  coalesce.rs  compat.rs  constraints.rs  dedent_string.rs  dynamic_keyword.rs  empty_declarations.rs  enums.rs  generics.rs  identity_swap.rs  intersection.rs  literal_types.rs  mod.rs  modifiers.rs  none_chain.rs  not_type.rs  overload.rs  prune_imports.rs  subscript.rs  super_keyword.rs  tuple_type.rs  type_is.rs  typing_redirect.rs  unpack.rs
crates/by_transforms/src/transforms/: annotation.rs  anon_named_tuple.rs  ast_driver.rs  auto_quote.rs  callable.rs  cast.rs  coalesce.rs  coalesce_chain.rs  compat.rs  decl_site_variance.rs  decorator_keyword.rs  dedent_string.rs  dynamic_keyword.rs  empty_declarations.rs  enums.rs  float_const.rs  force_unwrap.rs  generic_call.rs  generics.rs  identity_swap.rs  implicit_typing.rs  init_method.rs  intersection.rs  just_float.rs  kw_subscript.rs  lazy_import.rs  literal_types.rs  main_function.rs  mod.rs  modifiers.rs  mutable_defaults.rs  none_chain.rs  not_type.rs  optional_type.rs  overload.rs  postfix_await.rs  propagate.rs  repeated_underscore.rs  sentinel.rs  some_ctor.rs  (+14 more)
crates/by_typeshed_patch/: Cargo.toml
crates/by_typeshed_patch/src/: lib.rs  main.rs  pep695.rs
crates/by_typeshed_patch/src/patches/: mapping.rs  mod.rs
crates/mdtest/src/: parser.rs
crates/ruff/: Cargo.toml
crates/ruff/src/: lib.rs
crates/ruff/tests/: analyze_graph.rs  config.rs  direxist_guard.rs  integration_test.rs  resolve_files.rs
crates/ruff_annotate_snippets/: Cargo.toml
crates/ruff_benchmark/benches/: linter.rs
crates/ruff_db/src/: files.rs  parsed.rs
crates/ruff_dev/src/: format_dev.rs
crates/ruff_graph/src/: resolver.rs
crates/ruff_linter/src/: linter.rs  packaging.rs  source_kind.rs  test.rs
crates/ruff_markdown/src/: lib.rs
crates/ruff_mdtest/src/: lib.rs
crates/ruff_python_ast/: Cargo.toml  ast.toml  generate.py
crates/ruff_python_ast/src/: comparable.rs  generated.rs  helpers.rs  lib.rs  nodes.rs  operator_precedence.rs  relocate.rs  token.rs  visitor.rs
crates/ruff_python_ast/src/visitor/: source_order.rs  transformer.rs
crates/ruff_python_codegen/src/: generator.rs
crates/ruff_python_formatter/src/: generated.rs  lib.rs  options.rs  range.rs
crates/ruff_python_formatter/tests/: fixtures.rs
crates/ruff_python_parser/src/: error.rs  lexer.rs  lib.rs  semantic_errors.rs  token_source.rs
crates/ruff_python_semantic/src/: model.rs
crates/ruff_python_stdlib/src/: path.rs
crates/ruff_source_file/: Cargo.toml
crates/ruff_text_size/: Cargo.toml
crates/ruff_wasm/src/: lib.rs
crates/ruff_workspace/src/: resolver.rs  settings.rs
crates/ty/: Cargo.toml
crates/ty/docs/: cli.md  rules.md
crates/ty/src/: args.rs  by_commands.rs  cli-reference.md  lib.rs  main.rs
crates/ty/tests/: by_e2e.rs  mdtest_divergence.rs
crates/ty_ide/src/: completion.rs  goto_declaration.rs  goto_definition.rs  goto_type_definition.rs  inlay_hints.rs  type_hierarchy.rs
crates/ty_module_resolver/src/: list.rs  module.rs  path.rs  resolve.rs
crates/ty_project/src/: lib.rs
crates/ty_python_core/src/: builder.rs  re_exports.rs
crates/ty_python_semantic/src/: api_lockfile.rs  lib.rs  place.rs  semantic_model.rs  types.rs
crates/ty_python_semantic/tests/: corpus.rs
crates/ty_test/src/: external_dependencies.rs  lib.rs
crates/ty_vendored/src/: lib.rs
docs/: generics.md  getting-started.md  index.md  polyfills.md  subscription-normalization.md
docs/basedpython/: cli-reference.md  getting-started.md  index.md
docs/basedpython/development/: how-transpilation-works.md  reverse-transforms.md  sourcemaps.md  typeshed-patches.md
docs/basedpython/features/: anonymous-named-tuple.md  api-lock.md  await-attribute.md  callable.md  cast.md  constraints.md  decorator-keyword.md  dedent-strings.md  dynamic.md  empty-declarations.md  enums.md  float-literals.md  forward-references.md  generic-calls.md  generics.md  identity-swap.md  if-let.md  implicit-typing.md  init-method.md  intersection.md  kw-subscript.md  lazy-imports.md  literal-types.md  main-function.md  modifiers.md  mutable-defaults.md  no-number-promotions.md  none-coalesce.md  not-type.md  optional-chaining.md  overloads.md  polyfills.md  properties.md  repeated-underscore.md  sealed-classes.md  (+13 more)
docs/development/: generics.md  how-transpilation-works.md  reverse-transforms.md  ruff-upstream-sync.md
docs/features/: auto-quoting.md  callable-syntax.md  intersection-types.md  literal-types.md  modifiers.md  multiline-strings.md  mutable-defaults.md  none-operators.md  overload.md  polyfills.md  typed-lambda.md  unpack-syntax.md  visibility-modifiers.md
scripts/: check_ecosystem_roundtrip.py  ecosystem_projects.toml  ecosystem_test.py  generate_mkdocs.py  sync_typeshed_by.sh  transform_readme.py
src/: args.rs  config.rs  lib.rs  main.rs  source_map.rs  symbol_table.rs
src/reverse_transforms/: empty_class.rs  literal_types.rs  mod.rs  subscript.rs
src/transforms/: annotation.rs  auto_quote.rs  callable.rs  coalesce.rs  compat.rs  dedent_string.rs  empty_declarations.rs  generics.rs  intersection.rs  literal_types.rs  mod.rs  modifiers.rs  mutable_defaults.rs  none_chain.rs  overload.rs  subscript.rs  typed_lambda.rs  typing_redirect.rs  unpack.rs
tests/: e2e.rs
(+585 files in other folders)
