[package]
name = "basedpython"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "by"
path = "src/main.rs"

[lib]
name = "basedpython"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
indoc = "2"

# ---------------------------------------------------------------------------
# Workspace
#
# basedpython vendors crates from astral-sh/ruff under `crates/` so we
# can extend the Python grammar/AST for basedpython-specific syntax without
# depending on a remote branch. Upstream ref: see docs/ruff-upstream-sync.md.
# ---------------------------------------------------------------------------

[workspace]
members = ["crates/*"]
resolver = "2"
# `cargo build` / `cargo test` default to just the top-level basedpython
# package; upstream vendored crates are built through the dep graph and
# retested separately if needed via `cargo test -p <crate>`.
default-members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.93"
homepage = "https://github.com/morganbartholomew/basedpython"
documentation = "https://github.com/morganbartholomew/basedpython"
repository = "https://github.com/morganbartholomew/basedpython"
authors = ["Morgan Bartholomew"]
license = "MIT"

[workspace.dependencies]
# vendored ruff crates
ruff_annotate_snippets = { path = "crates/ruff_annotate_snippets" }
ruff_python_ast = { path = "crates/ruff_python_ast" }
ruff_python_parser = { path = "crates/ruff_python_parser" }
ruff_python_trivia = { path = "crates/ruff_python_trivia" }
ruff_source_file = { path = "crates/ruff_source_file" }
ruff_text_size = { path = "crates/ruff_text_size" }

# external crates used by the vendored set. versions match ruff's pin at the
# vendored SHA so swapping in/out is mechanical
aho-corasick = { version = "1.1.3" }
anstream = { version = "1.0.0" }
anstyle = { version = "1.0.10" }
anyhow = { version = "1.0.80" }
bitflags = { version = "2.5.0" }
bstr = { version = "1.9.1" }
compact_str = "0.9.0"
datatest-stable = { version = "0.3.3" }
get-size2 = { version = "0.7.3", features = [
    "derive",
    "smallvec",
    "hashbrown",
    "compact-str",
    "ordermap",
] }
insta = { version = "1.35.1" }
is-macro = { version = "0.3.5" }
itertools = { version = "0.14.0" }
memchr = { version = "2.7.1" }
rustc-hash = { version = "2.0.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.113" }
serde_test = { version = "1.0.152" }
static_assertions = "1.1.0"
thiserror = { version = "2.0.0" }
unicode-ident = { version = "1.0.12" }
unicode-normalization = { version = "0.1.23" }
unicode-width = { version = "0.2.0" }
unicode_names2 = { version = "1.2.2" }
walkdir = { version = "2.3.2" }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(fuzzing)",
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
disallowed_methods = "allow"
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
collapsible_match = "allow"
needless_continue = "allow"
unnecessary_debug_formatting = "allow"
needless_raw_string_hashes = "allow"
ignore_without_reason = "allow"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
if_not_else = "allow"
large_stack_arrays = "allow"

# Parser benefits from codegen-units=1 in release builds.
[profile.release.package.ruff_python_parser]
codegen-units = 1
[profile.release.package.ruff_python_ast]
codegen-units = 1

# Keeping parser dev builds compatible with wasm tools' local limits.
[profile.dev.package.ruff_python_parser]
opt-level = 1
