[package]
name = "basedpython"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "by"
path = "src/main.rs"

[lib]
name = "basedpython"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
ty = { workspace = true }
clap = { version = "4", features = ["derive", "wrap_help", "string", "env"] }
clap_complete_command = { workspace = true }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
indoc = "2"

# ---------------------------------------------------------------------------
# Workspace
#
# basedpython vendors crates from astral-sh/ruff under `crates/` so we
# can extend the Python grammar/AST for basedpython-specific syntax without
# depending on a remote branch. Upstream ref: see docs/ruff-upstream-sync.md.
#
# we also vendor the full ruff CLI crates to build `buff`, a 1-to-1 drop-in
# replacement for `ruff` that natively understands `.by` files. crate names
# match upstream exactly to keep upstream merges mechanical.
# ---------------------------------------------------------------------------

[workspace]
members = ["crates/*"]
resolver = "2"
# `cargo build` / `cargo test` default to just the top-level basedpython
# package; upstream vendored crates are built through the dep graph and
# retested separately if needed via `cargo test -p <crate>`.
default-members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.93"
homepage = "https://github.com/KotlinIsland/basedpython"
documentation = "https://github.com/KotlinIsland/basedpython"
repository = "https://github.com/KotlinIsland/basedpython"
authors = ["KotlinIsland"]
license = "MIT"

[workspace.dependencies]
# vendored ruff crates — parser/AST (extended for basedpython syntax)
ruff_annotate_snippets = { path = "crates/ruff_annotate_snippets" }
ruff_python_ast = { path = "crates/ruff_python_ast" }
ruff_python_parser = { path = "crates/ruff_python_parser" }
ruff_python_trivia = { path = "crates/ruff_python_trivia" }
ruff_source_file = { path = "crates/ruff_source_file" }
ruff_text_size = { path = "crates/ruff_text_size" }

# vendored ruff crates — formatter, linter, LSP, and CLI (→ buff binary)
ruff = { path = "crates/ruff" }
ruff_cache = { path = "crates/ruff_cache" }
ruff_db = { path = "crates/ruff_db", default-features = false }
ruff_diagnostics = { path = "crates/ruff_diagnostics" }
ruff_formatter = { path = "crates/ruff_formatter" }
ruff_graph = { path = "crates/ruff_graph" }
ruff_index = { path = "crates/ruff_index" }
ruff_linter = { path = "crates/ruff_linter" }
ruff_macros = { path = "crates/ruff_macros" }
ruff_markdown = { path = "crates/ruff_markdown" }
ruff_notebook = { path = "crates/ruff_notebook" }
ruff_options_metadata = { path = "crates/ruff_options_metadata" }
ruff_python_codegen = { path = "crates/ruff_python_codegen" }
ruff_python_formatter = { path = "crates/ruff_python_formatter" }
ruff_python_importer = { path = "crates/ruff_python_importer" }
ruff_python_index = { path = "crates/ruff_python_index" }
ruff_python_literal = { path = "crates/ruff_python_literal" }
ruff_python_semantic = { path = "crates/ruff_python_semantic" }
ruff_python_stdlib = { path = "crates/ruff_python_stdlib" }
ruff_server = { path = "crates/ruff_server" }
ruff_memory_usage = { path = "crates/ruff_memory_usage" }
ruff_workspace = { path = "crates/ruff_workspace" }

# vendored ty crates — full suite for `by` (drop-in replacement for `ty`)
ty = { path = "crates/ty" }
ty_combine = { path = "crates/ty_combine" }
ty_ide = { path = "crates/ty_ide" }
ty_module_resolver = { path = "crates/ty_module_resolver" }
ty_project = { path = "crates/ty_project" }
ty_python_core = { path = "crates/ty_python_core" }
ty_python_semantic = { path = "crates/ty_python_semantic" }
ty_server = { path = "crates/ty_server" }
ty_site_packages = { path = "crates/ty_site_packages" }
ty_static = { path = "crates/ty_static" }
ty_test = { path = "crates/ty_test" }
mdtest = { path = "crates/mdtest" }
ty_vendored = { path = "crates/ty_vendored" }

# external crates — versions match ruff's pin at vendored SHA
aho-corasick = { version = "1.1.3" }
anstream = { version = "1.0.0" }
anstyle = { version = "1.0.10" }
anyhow = { version = "1.0.80" }
arc-swap = { version = "1.7.1" }
argfile = { version = "1.0.0" }
assert_fs = { version = "1.1.0" }
bincode = { version = "2.0.0" }
bitflags = { version = "2.5.0" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bstr = { version = "1.9.1" }
cachedir = { version = "0.3.1" }
camino = { version = "1.1.7" }
clap = { version = "4.5.3", features = ["derive"] }
clap_complete_command = { version = "0.6.0" }
clearscreen = { version = "4.0.0" }
codspeed-criterion-compat = { version = "4.4.1", default-features = false }
colored = { version = "3.0.0" }
compact_str = "0.9.0"
countme = { version = "3.0.1" }
criterion = { version = "0.8.0", default-features = false }
crossbeam = { version = "0.8.4" }
ctrlc = { version = "3.4.4" }
csv = { version = "1.3.1" }
dashmap = { version = "6.0.1" }
datatest-stable = { version = "0.3.3" }
divan = { package = "codspeed-divan-compat", version = "4.4.1" }
drop_bomb = { version = "0.1.5" }
dunce = { version = "1.0.5" }
etcetera = { version = "0.11.0" }
fern = { version = "0.7.0" }
filetime = { version = "0.2.23" }
get-size2 = { version = "0.7.3", features = [
    "derive",
    "smallvec",
    "hashbrown",
    "compact-str",
    "ordermap",
] }
getrandom = { version = "0.4.1" }
glob = { version = "0.3.1" }
globset = { version = "0.4.14" }
globwalk = { version = "0.9.1" }
hashbrown = { version = "0.16.0", default-features = false, features = [
    "raw-entry",
    "equivalent",
    "inline-more",
] }
heck = "0.5.0"
icu_properties = { version = "2.1.2" }
ignore = { version = "0.4.24" }
imara-diff = { version = "0.2.0" }
imperative = { version = "1.0.4" }
indexmap = { version = "2.6.0" }
indicatif = { version = "0.18.0" }
indoc = { version = "2.0.4" }
insta = { version = "1.35.1" }
insta-cmd = { version = "0.6.0" }
is-macro = { version = "0.3.5" }
itertools = { version = "0.14.0" }
jiff = { version = "0.2.0" }
jod-thread = { version = "1.0.0" }
libc = { version = "0.2.153" }
libcst = { version = "1.8.4", default-features = false }
log = { version = "0.4.17" }
lsp-server = { version = "0.7.6" }
lsp-types = { git = "https://github.com/astral-sh/lsp-types.git", rev = "e15db0593f0ecbbd80599c3f5880e4bf5da1ca0c", features = ["proposed"] }
matchit = { version = "0.9.0" }
memchr = { version = "2.7.1" }
mimalloc = { version = "0.1.39" }
natord = { version = "1.0.9" }
notify = { version = "8.0.0" }
once_cell = { version = "1.21.4" }
ordermap = { version = "1.0.0" }
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
path-slash = { version = "0.2.1" }
pathdiff = { version = "0.2.1" }
pep440_rs = { version = "0.7.1" }
pretty_assertions = "1.3.0"
proc-macro2 = { version = "1.0.79" }
pyproject-toml = { version = "0.13.4" }
quick-junit = { version = "0.6.0" }
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = { version = "1.0.0" }
quote = { version = "1.0.23" }
rand = { version = "0.10.0" }
rayon = { version = "1.10.0" }
regex = { version = "1.10.2" }
regex-automata = { version = "0.4.9" }
regex-syntax = { version = "0.8.8" }
rustc-hash = { version = "2.0.0" }
rustc-stable-hash = { version = "0.1.2" }
# pinned git dep — ruff_db and ruff_server depend on this for incremental computation
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "2f687a17ceea8ec7aaa605561ccbde938ccef086", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
schemars = { version = "1.0.4" }
seahash = { version = "4.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.113" }
serde_test = { version = "1.0.152" }
serde_with = { version = "3.6.0", default-features = false, features = ["macros"] }
shellexpand = { version = "3.0.0" }
similar = { version = "3.0.0", features = ["inline"] }
smallvec = { version = "1.13.2", features = ["union", "const_generics", "const_new"] }
snapbox = { version = "1.0.0", features = ["diff", "term-svg", "cmd", "examples"] }
static_assertions = "1.1.0"
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = { version = "0.28.0" }
supports-hyperlinks = { version = "3.1.0" }
syn = { version = "2.0.55" }
tempfile = { version = "3.9.0" }
test-case = { version = "3.3.1" }
thiserror = { version = "2.0.0" }
tikv-jemallocator = { version = "0.6.0" }
toml = { version = "1.0.0" }
tracing = { version = "0.1.40" }
tracing-flame = { version = "0.2.0" }
tracing-indicatif = { version = "0.3.11" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "smallvec",
] }
tryfn = { version = "1.0.0" }
typed-arena = { version = "2.0.2" }
unicode-ident = { version = "1.0.12" }
unicode-normalization = { version = "0.1.23" }
unicode-width = { version = "0.2.0" }
unicode_names2 = { version = "1.2.2" }
url = { version = "2.5.0" }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = { version = "2.3.2" }
which = { version = "8.0.0" }
wild = { version = "2" }
zip = { version = "0.6.6", default-features = false }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(fuzzing)",
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
disallowed_methods = "allow"
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
collapsible_match = "allow"
needless_continue = "allow"
unnecessary_debug_formatting = "allow"
needless_raw_string_hashes = "allow"
ignore_without_reason = "allow"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
if_not_else = "allow"
large_stack_arrays = "allow"

[profile.release]
lto = "fat"
codegen-units = 16

# Parser benefits from codegen-units=1 in release builds.
[profile.release.package.ruff_python_parser]
codegen-units = 1
[profile.release.package.ruff_python_ast]
codegen-units = 1

# Keeping parser dev builds compatible with wasm tools' local limits.
[profile.dev.package.ruff_python_parser]
opt-level = 1

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release.package.salsa]
codegen-units = 1

[profile.dev.package.salsa]
opt-level = 3
