[package]
name = "ruff_python_ast"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
ruff_python_trivia = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }

aho-corasick = { workspace = true }
bitflags = { workspace = true }
compact_str = { workspace = true }
get-size2 = { workspace = true, optional = true }
is-macro = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
get-size = ["dep:get-size2", "ruff_text_size/get-size"]
serde = ["dep:serde", "ruff_text_size/serde", "compact_str/serde"]
# declared but unused — kept so upstream cfg guards don't trigger check-cfg
cache = []
salsa = []
schemars = []

[lints]
workspace = true
